[package]
name = "nue-codegen"
version = "0.2.0"
authors = ["arcnmx"]

description = "Stable POD and binary data encoding I/O macros"
documentation = "http://arcnmx.github.io/nue/nue_macros/"
repository = "https://github.com/arcnmx/nue"
readme = "../README.md"
keywords = ["nue", "pod", "data", "encode", "decode"]
license = "MIT"

build = "src/build.rs"

[features]
default = ["with-syntex"]
unstable = ["quasi_macros"]
with-syntex = ["quasi/with-syntex", "quasi_codegen", "quasi_codegen/with-syntex", "syntex", "syntex_syntax"]

[lib]
name = "nue_codegen"
path = "src/syntex.rs"

[build-dependencies]
quasi_codegen = { verision = "0.3", optional = true }
syntex = { version = "0.7", optional = true }

[dependencies]
aster = { version = "0.4", default-features = false }
quasi = { verision = "0.3", default-features = false }
quasi_macros = { version = "0.3", optional = true }
syntex = { version = "0.7", optional = true }
syntex_syntax = { version = "0.9", optional = true }
