[package]
name = "nue-macros"
version = "0.2.0"
authors = ["arcnmx"]

description = "POD and binary data encoding I/O macros"
documentation = "http://arcnmx.github.io/nue/nue_macros/"
repository = "https://github.com/arcnmx/nue"
readme = "../README.md"
keywords = ["nue", "pod", "data", "encode", "endian"]
license = "MIT"

[lib]
name = "nue_macros"
plugin = true

[dependencies.nue-codegen]
version = "0.2"
path = "../codegen"
default-features = false
features = ["unstable"]

[dev-dependencies.nue]
version = "0.2"
features = ["unstable"]
path = "../"

[dev-dependencies.pod]
version = "0.2"
features = ["unstable"]
path = "../pod"

[[test]]
name = "test"
path = "tests/test.rs"
