[package]
name = "packed"
version = "0.2.0"
authors = ["arcnmx"]

description = "A safe #[repr(packed)] interface"
documentation = "http://arcnmx.github.io/nue/packed/"
repository = "https://github.com/arcnmx/nue"
readme = "../README.md"
keywords = ["nue", "packed", "data", "unaligned", "aligned"]
license = "MIT"

[features]
unstable = []
