[package]
name = "nue-tests"
version = "0.0.0"
authors = ["arcnmx"]
build = "build.rs"

[features]
unstable = ["pod/unstable", "nue/unstable"]

[build-dependencies]
syntex = "0.7"

[build-dependencies.nue-codegen]
path = "../codegen"

[dev-dependencies.nue]
path = "../"

[dev-dependencies.pod]
path = "../pod"

[[test]]
name = "test"
path = "tests/test.rs"
