[package]
version = "0.0.0"
name = "nue_macros_test"

[lib]
name = "nue_macros_test"
path = "../src/lib.rs"

[dependencies.nue-codegen]
path = "../../codegen"
default-features = false
features = ["unstable"]

[dev-dependencies.pod]
features = ["unstable"]
path = "../../pod"

[dev-dependencies.nue]
features = ["unstable"]
path = "../../"

[dev-dependencies.nue-macros]
path = "../"
